crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F631_F631.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F631.py:1:1: F631 Assert test is a non-empty tuple, which is always `True`
  |
1 | assert (False, "x")
  | ^^^^^^^^^^^^^^^^^^^ F631
2 | assert (False,)
3 | assert ()
  |

./resources/test/fixtures/pyflakes/F631.py:2:1: F631 Assert test is a non-empty tuple, which is always `True`
  |
2 | assert (False, "x")
3 | assert (False,)
  | ^^^^^^^^^^^^^^^ F631
4 | assert ()
5 | assert True
  |


