crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F634_F634.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F634.py:1:1: F634 If test is a tuple, which is always `True`
  |
1 | / if (1, 2):
2 | |     pass
  | |________^ F634
3 |   
4 |   for _ in range(5):
  |

./resources/test/fixtures/pyflakes/F634.py:7:5: F634 If test is a tuple, which is always `True`
   |
 7 |       if True:
 8 |           pass
 9 |       elif (3, 4):
   |  _____^
10 | |         pass
11 | |     elif ():
12 | |         pass
   | |____________^ F634
   |


