crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F702_F702.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: ContinueOutsideLoop
    body: "`continue` not properly in loop"
    commit: ~
    fixable: false
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 12
  fix: ~
  parent: ~
- kind:
    name: ContinueOutsideLoop
    body: "`continue` not properly in loop"
    commit: ~
    fixable: false
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 12
  fix: ~
  parent: ~
- kind:
    name: ContinueOutsideLoop
    body: "`continue` not properly in loop"
    commit: ~
    fixable: false
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 12
  fix: ~
  parent: ~
- kind:
    name: ContinueOutsideLoop
    body: "`continue` not properly in loop"
    commit: ~
    fixable: false
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 8
  fix: ~
  parent: ~

