crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F704_F704.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: YieldOutsideFunction
    body: "`yield` statement outside of a function"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 11
  fix: ~
  parent: ~
- kind:
    name: YieldOutsideFunction
    body: "`yield` statement outside of a function"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 7
  fix: ~
  parent: ~
- kind:
    name: YieldOutsideFunction
    body: "`yield from` statement outside of a function"
    commit: ~
    fixable: false
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 12
  fix: ~
  parent: ~
- kind:
    name: YieldOutsideFunction
    body: "`await` statement outside of a function"
    commit: ~
    fixable: false
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 9
  fix: ~
  parent: ~

