crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F707_F707.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F707.py:3:1: F707 An `except` block as not the last exception handler
  |
3 | try:
4 |     pass
5 | except:
  | ^^^^^^ F707
6 |     pass
7 | except ValueError:
  |

./resources/test/fixtures/pyflakes/F707.py:10:1: F707 An `except` block as not the last exception handler
   |
10 | try:
11 |     pass
12 | except:
   | ^^^^^^ F707
13 |     pass
14 | except ValueError:
   |

./resources/test/fixtures/pyflakes/F707.py:19:1: F707 An `except` block as not the last exception handler
   |
19 | try:
20 |     pass
21 | except:
   | ^^^^^^ F707
22 |     pass
23 | except ValueError:
   |


