crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F722_F722.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F722.py:9:12: F722 Syntax error in forward annotation: `///`
   |
 9 | def g() -> "///":
   |            ^^^^^ F722
10 |     pass
   |

./resources/test/fixtures/pyflakes/F722.py:13:4: F722 Syntax error in forward annotation: `List[int]☃`
   |
13 | X: """List[int]"""'☃' = []
   |    ^^^^^^^^^^^^^^^^^^ F722
   |


