crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_0.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F811_0.py:10:5: F811 Redefinition of unused `bar` from line 6
   |
10 | def bar():
   |     ^^^ F811
11 |     pass
   |


